Save state on orientation change, button functions
State is saved on orientation changed, inputed values are not lost.

Basic functionality for the buttons. Cancel returns back to main, save
just triggers a snackbar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OptionsActivity"></activity>
+        <activity
+            android:name=".OptionsActivity"
+            android:label="@string/options_title"
+            android:configChanges="orientation|keyboardHidden"/>
     </application>
 
 </manifest>
