--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".AssetsGrabber">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -23,7 +24,7 @@
             android:name=".OptionsActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/options_title" />
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".GameActivity" />
     </application>
 
 </manifest>
