--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
     package="ca.qc.cegep_heritage.mhaley_a03_hangman">
 
     <application
+        android:name=".AssetsGrabber"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".AssetsGrabber">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -25,6 +25,8 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/options_title" />
         <activity android:name=".GameActivity" />
+        <activity android:name=".LoseActivity" />
+        <activity android:name=".WinActivity"></activity>
     </application>
 
 </manifest>
