--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:configChanges="orientation|screenSize">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -22,11 +23,10 @@
         </activity>
         <activity
             android:name=".OptionsActivity"
-            android:configChanges="orientation|keyboardHidden"
             android:label="@string/options_title" />
         <activity android:name=".GameActivity" />
         <activity android:name=".LoseActivity" />
-        <activity android:name=".WinActivity"></activity>
+        <activity android:name=".WinActivity" />
     </application>
 
 </manifest>
