--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,12 @@
     <application
         android:name=".AssetsGrabber"
         android:allowBackup="true"
+        android:configChanges="orientation|screenSize"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:configChanges="orientation|screenSize">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -27,6 +27,7 @@
         <activity android:name=".GameActivity" />
         <activity android:name=".LoseActivity" />
         <activity android:name=".WinActivity" />
+        <activity android:name=".AboutActivity"/>
     </application>
 
 </manifest>
